RESOLVED FIXED299248
[JSC] OMG exception throwing thunk should be called instead of jumped
https://bugs.webkit.org/show_bug.cgi?id=299248
Summary [JSC] OMG exception throwing thunk should be called instead of jumped
Yusuke Suzuki
Reported 2025-09-20 16:09:46 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-09-20 16:09:55 PDT
Yusuke Suzuki
Comment 2 2025-09-20 16:55:03 PDT
EWS
Comment 3 2025-09-21 10:46:56 PDT
Committed 300298@main (276a1470de20): <https://commits.webkit.org/300298@main> Reviewed commits have been landed. Closing PR #51075 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.